# c-lang

./: .gitignore  Cコードアナライザー_データフロー技術仕様書.docx  README.md  agent.py  agent_v14.py  agent_v15.py  agent_v16.py  agent_v17.py  agent_v3.py  agent_v4.py  agent_v5.py  agent_v6.py  agent_v7.py  agent_v8.py  data_flow_diagram.html  debug_ai.py  diagnose.py  file.txt  flexible-formatter-v2.html  formatted-document (2).docx  function_classifier.py  index 2.html  index 3.html  index 4.html  index 5.html  index 6.html  index_1.html  index_2.html  index_6.html  index_7.html  index_8.html  index_9.html  index_updated.html  parser.py  professional-formatter.html  pyproject.toml  requirements.txt  test_ai.py  text-formatter-fixed.html  verify_ai.py  (+1 more)
src/: __init__.py  ai_analyzer.py  ast_dumper.py  ast_parser.py  config.py  data_flow_analyzer.py  macro_extractor.py  main.py  robust_analyzer.py  tree_visualizer.py
test_cases/apl001/: main.c
test_cases/apl002/: main.c
test_cases/apl003/: main.c
test_cases/apl004/: data.c  main.c
test_cases/apl005/: main.c
test_cases/apl006/: main.c
test_cases/apl008/: apl_in.h  main.c
test_cases/apl009/: apl_in.h  main.c
test_cases/apl010/: apl_in.h  main.c
test_cases/apl011/: apl_in.h  main.c
test_cases/apl012/: apl_in.h  init.c  main.c  process.c
test_cases/apl100/: apl_in.h  main.c
test_cases/apl_hard1/: main.c
test_cases/apl_hard2/: main.c
test_cases/apl_hard3/: main.c
test_cases/apl_hard4/: main.c
test_cases/apl_hard5/: main.c
test_cases/include/: apl_in.h  mpf_mfs.h  pmf.h
tools/: ast_viewer_libclang.py  ast_viewer_pro.py  ast_viewer_v2.py  code_agent_v9.py  df_diagram_agent.py  parser.py  path_formatter.py
(+1 files in other folders)
